# pseudocode-telu

./: .gitignore  Cargo.toml  README.md  build.rs  comp.txt  exm.asm  exmar  heyo  main  main.bc  main.c  main.cpp  main.ll  out  output  run.sh  test213  testmain  uma1
src/: compile.rs  compile_alias.rs  compile_expr.rs  compile_funcs.rs  compile_pest.rs  compile_types.rs  expr_ex.txt  main.c  main.rs  parse.rs  progra  program  program_ex.txt  programc  rule.pest  simple_program.tups  type_impl.rs
